spacing fix on project health  card, moved serach bar and buton to allign with header- employee directory

--- a/user/home/home.css
+++ b/user/home/home.css
@@ -177,6 +177,7 @@
     justify-content: space-between;
     align-items: center;
     font-size: 14px;
+    gap: 8px;
 }
 
 .info-label {
